--- a/build.gradle
+++ b/build.gradle
@@ -7,3 +7,29 @@ plugins {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+allprojects {
+    def YEAR_WEEK = new Date().format("yyww").toInteger()
+    def DAY = new Date().format("u").toInteger()
+    def HOUR_MINUTE = new Date().format("HHmm").toInteger()
+
+    //The time stamp
+    def BUILD_TIMESTAMP = 100000 * YEAR_WEEK + 100000 * DAY + HOUR_MINUTE
+
+    //Semantic versioning
+    def MAJOR =1 // 1: Avestruz, 2: Ballena 3: Caballo, ...
+    def MINOR =0
+    def PATCH=BUILD_TIMESTAMP
+
+    //name animals
+    def BUILD_VERSION = "Avestruz-${MAJOR}.${MINOR}.${PATCH}"
+
+    //Set the values to whole project
+
+    ext.buildVersion = BUILD_VERSION
+    ext.buildTimestamp = BUILD_TIMESTAMP
+    logger.lifecycle("Version to use: <${BUILD_VERSION}>")
+
+    //use the temporal directory to store the build
+    buildDir ="${System.env.TEMP}\\gradle\\${project.name}"
+}
