--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ plugins {
 
 android {
     compileSdk 32
+    buildToolsVersion '33.0.0'
+    ndkVersion '24.0.8215888'
 
     defaultConfig {
         applicationId "cl.ucn.disc.dsm.pictwin.frontend"
@@ -23,10 +25,9 @@ android {
             shrinkResources true
             zipAlignEnabled true
             crunchPngs true
-            //proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             versionNameSuffix ".r"
         }
-        // debug
+        // Development
         debug {
             debuggable true
             minifyEnabled false
@@ -46,8 +47,7 @@ android {
             output.versionNameOverride = project.ext.buildVersion + (variant.name == "debug" ? ".d" : ".r")
         }
     }
-    buildToolsVersion '32.0.0'
-    ndkVersion '24.0.8215888'
+
 }
 
 dependencies {
@@ -55,10 +55,10 @@ dependencies {
     // androidx stuff
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    //implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     // leakcanary
-    //debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.9.1'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.9.1'
 
     // google GSON
     implementation 'com.google.code.gson:gson:2.9.0'
@@ -66,14 +66,29 @@ dependencies {
     // retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.14.9'
+    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.10'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
+
+    //Lombok
+    compileOnly 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
 
     //Material design
-    runtimeOnly 'com.google.android.material:material:1.6.0'
-
+    runtimeOnly 'com.google.android.material:material:1.6.1'
 
     //testing
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //SLF4J
+    implementation 'org.slf4j:slf4j-api:1.7.36'
+    implementation 'com.github.tony19:logback-android:2.0.0'
+    testImplementation 'org.slf4j:slf4j-api:1.7.36'
+    testImplementation 'ch.qos.logback:logback-classic:1.2.11'
+
+    //recyclerView
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'com.mikepenz:fastadapter:5.6.0'
+
 }
